<resources>
    <string name="app_name">Shared Security System</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="new_user">New User</string>
    <string name="registration_form">Registration form</string>
    <string name="verify_password">Verify password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_system_id">Enter System ID</string>
    <string name="i_own_a_security_system">I own a security system</string>
    <string name="i_don_t_own_a_security_system">I don\'t own a security system</string>
    <string name="back_to_login">Back to login</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome back</string>
    <string name="your_details">Your Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <string name="add_contact">Add contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_mail">Contact mail</string>
    <string name="phone_number">Phone number</string>
    <string name="create_contact">Create contact</string>
    <string name="default_notification_channel_id">ChannelId</string>
    <string name="server_key">AAAAHVzeA1k:APA91bFHff2gKVgZXOKKeyuRHUAmeTZI7ZC4bY_BfA1kI7_2z7f266TKWH4jknZy9wkoOsE85Y2dtw4Bka_4-B0mkqNLqWs8srD1EL2NXI8TmtLCZaK7QimX-oV3jQaYSjHR987CcqUf</string>
</resources>