<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".ui.ContactActivity"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/rl_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black">

            <TextView
                android:id="@+id/txt_cntct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:text="@string/add_contact"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_Center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl_Header"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:gravity="center_horizontal">

            <EditText
                android:id="@id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/contact_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/contact_mail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"/>

            <EditText
                android:id="@id/txt_phn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_email"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"/>

            <Button
                android:id="@+id/btn_crt_cnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_phn"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/orange"
                android:text="@string/create_contact"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>

</RelativeLayout>