<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity"
    android:id="@+id/drawerHome">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/rl_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:layout_marginStart="10dp" >

            <ImageView
                android:id="@+id/img_hmburgr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/menu"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/txt_usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="100dp"
                android:text="@string/welcome_back"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_details"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_below="@+id/txt_usr"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_Header"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/edt_txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_phn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_txt_email"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="20dp"/>
        </RelativeLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_floating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/orange"
                android:src="@drawable/ic_baseline_control_point_24"
                android:layout_marginBottom="30dp"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewHome"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/dark"
        app:itemTextColor="@color/skin"
        app:itemTextAppearance="@style/menuView"
        android:layout_gravity="start"
        app:itemIconTint="@color/white"
        app:menu="@menu/app_menu" />

</androidx.drawerlayout.widget.DrawerLayout>